# beta

./: .gitignore  README.md
beta_org/: CMakeLists.txt  README.md
beta_org/analysis/: README.md  balanced_pc3_hole60_evaluate.py  balanced_pc3_hole_scan_evaluate.py  balanced_pc3_hole_scan_ml_confirm.py  balanced_pc3_ml_confirm.cc  balanced_pc3_pim_bdt_study.cc  bgo_compare_v1.py  bgo_extract_features_v2.cc  bgo_extract_pattern_v1.cc  bgo_features_v2.py  bgo_optimize_v2.py  bgo_threshold3_analysis_v1.py  bgo_threshold3_confirm_v1.py  bgoc_pim_bdt_confirm_v1.cc  bgoc_pim_bdt_scan_v1.cc  bgoc_qda5_confirm_v1.py  bgoc_u15x15_feasibility_v1.py  bgoegg31_corrected_head_pc_size_scan.py  bgoegg31_zmirror_head_pc_confirm.py  bgoegg_frustum31_threshold3_confirm.py  bgoegg_frustum31_threshold3_scan.py  bgoegg_pc_aperture_evaluate.py  bgoegg_pc_confirm_evaluate.py  bgoegg_pc_detector_evaluate.py  bgoegg_pc_downstream_thin_scan.py  bgoegg_rate_overlay_evaluate.py  bgoegg_refinement_v1.py  bgoegg_study_v1.py  check_bgoegg_geometry.cc  plot_bgo_geometry_comparison.py  plot_bgoegg_pc_detector_performance.py  plot_bgoegg_pc_geometry.py  summarize_bgo_pc.C  validate_hodo_root_schema.cc
beta_org/include/: BGOeggGeometry.hh  BetaConfig.hh  CalorimeterHit.hh  Constant.hh  DetectorResponse.hh  HodoscopeHit.hh  HodoscopeSD.hh  TargetHit.hh  TargetSD.hh  betaActionInitialization.hh  betaBiasingOperator.hh  betaCondXSScaleProcess.hh  betaDetectorConstruction.hh  betaEventAction.hh  betaPhysicsList.hh  betaPrimaryGeneratorAction.hh  betaRunAction.hh  betaSteppingAction.hh  betaTrackingAction.hh
(+190 files in other folders)
